[package]
name = "nihil-bar"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk4 = { version = "0.10.0", features = ["v4_12"] }
gtk4-layer-shell = "0.7.1"
thiserror = "2.0.18"
glib = "0.21.5"
udev = "0.9.3"
pipewire = "0.9.2"
async-channel = "2.5.0"
zbus = { version = "5.14.0", features = ["tokio"]}
tokio = { version = "1.50.0", features = ["full"] }
futures-util = "0.3.32"